package com.mikeescom.decoratorpattern;

public interface Coffee {
    double getCost();
    String getIngredients();
}
